dev,console,account: Update eslint dependencies and format files

--- a/config/eslintrc.yaml
+++ b/config/eslintrc.yaml
@@ -5,7 +5,6 @@ extends:
   - plugin:import/recommended
   - plugin:cypress/recommended
   - prettier
-  - prettier/react
 
 parser: babel-eslint
 
@@ -120,6 +119,10 @@ rules:
     - warn
     - maxSize: 400
 
+  jest/no-conditional-expect: off
+  jest/no-try-expect: off
+  jest/no-done-callback: off
+
   # Change to `error` after https://github.com/TheThingsNetwork/lorawan-stack/issues/1086
   # is resolved.
 
@@ -168,6 +171,10 @@ rules:
       singleReturnOnly: false
       classPropertiesAllowed: false
       allowStandaloneDeclarations: false
+
+  arrow-body-style:
+    - warn
+    - as-needed
 
 # Overwrite jest's expect rules for cypress test files, which uses a different
 # assertion syntax.
