--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
+    "@babel/eslint-parser": "^7.12.17",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -40,18 +41,18 @@
     "css-loader": "^2.1.1",
     "cypress": "6.8.0",
     "cypress-file-upload": "^5.0.2",
-    "eslint": "^6.2.2",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-config-ttn": "git+https://github.com/TheThingsNetwork/eslint-config-ttn.git#v1.4.0",
-    "eslint-import-resolver-webpack": "^0.12.2",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-jsdoc": "^24.0.0",
-    "eslint-plugin-prefer-arrow": "^1.2.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.5",
+    "eslint-plugin-jsdoc": "^32.1.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -63,7 +64,7 @@
     "mkdirp": "^1.0.3",
     "nib": "^1.1.2",
     "pg": "^8.5.1",
-    "prettier": "^1.18.2",
+    "prettier": "^2.2.1",
     "react-test-renderer": "^16.0.0",
     "snapshot-diff": "^0.5.1",
     "stylint": "^2.0.0",
